Git Deployment Assignment/force-app/main/default/objects/managers__c/managers__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the Managers that are working in an organization.</description>
    <label>manager</label>
    <nameField>
        <label>manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>