Git Deployment Assignment/force-app/main/default/objects/managers__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores whether the manager is currently part of organization or no</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>