Git Deployment Assignment/force-app/main/default/objects/managers__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of  the Manager</description>
    <label>location</label>
    <referenceTo>Work_location__c</referenceTo>
    <relationshipLabel>managers</relationshipLabel>
    <relationshipName>managers</relationshipName>
    <type>Lookup</type>
</CustomField>