Git Deployment Assignment/force-app/main/default/objects/managers__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Stores the Name of Manager</description>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>