Git Deployment Assignment/force-app/main/default/objects/managers__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project1__c</referenceTo>
    <relationshipLabel>managers</relationshipLabel>
    <relationshipName>managers</relationshipName>
    <type>Lookup</type>
</CustomField>