Git Deployment Assignment/force-app/main/default/objects/managers__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <description>Sum of the salaries of the Developers which reports to this Manager</description>
    <label>Total Salary</label>
    <summarizedField>developer1__c.Salary__c</summarizedField>
    <summaryForeignKey>developer1__c.Reporting_Manager__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>